[package]
name = "VRX-64-kernel"
version = "0.1.0"
edition = "2024"
description = "Platform-agnostic kernel for VZGLYD display engine"
license = "MIT OR Apache-2.0"
repository = "https://github.com/vzglyd/VRX-64-kernel"
rust-version = "1.85"

[lib]
name = "vzglyd_kernel"

[dependencies]
vzglyd_slide = { package = "VRX-64-slide", git = "https://github.com/vzglyd/VRX-64-slide", branch = "main" }
postcard = { version = "1", features = ["alloc", "use-std"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
naga = { version = "23", features = ["wgsl-in"] }
thiserror = "1"
log = "0.4"
bytemuck = { version = "1", features = ["derive"] }
glam = "0.29"
gltf = { version = "1", default-features = false, features = ["KHR_lights_punctual", "extras", "names", "utils"] }

# Optional: WASM loading (feature-gated for native testing)
wasmtime = { version = "16", optional = true }
wasmtime-wasi = { version = "16", optional = true }

[features]
default = []
with-wasmtime = ["wasmtime", "wasmtime-wasi"]
